<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, StartActivity!</string>
    <string name="app_name">Battleships</string>
    <string name="place_ships_please_place_ships">Please place your ships:</string>
    <string name="place_ships_ships_remaining">Ships remaining:</string>
    <string name="place_ships_remaining_ships_formatted">Single tile ships: %1$d</string>
    <string name="place_ships_label">Place your ships!</string>
    <string name="place_ships_all_ships_placed">All ships placed.\nWaiting for opponent...</string>
    <string name="pairing_info">If the phones are not paired already, then you will need to accept the pairing notification before you can connect to your opponent.</string>
    <string name="find_opponent">Find opponent</string>
    <string name="win">Congratulations!\nYou won!</string>
    <string name="loose">You have been defeated!</string>
    <string name="place_ships_warn_abort_wait">Do you wish to stop waiting for your opponent and exit the game?</string>
    <string name="setup_game_game_type">Game type:</string>
    <string name="setup_game_select_game_type">Please select a game type</string>
    <string name="setup_game_waiting_for_host">Waiting for opponent to select rules...</string>
    <string name="setup_game_amount_single_ships">Amount of single tile ships:</string>
    <string name="setup_game_select_single_tile_ships">Please select amount of single tile ships</string>
    <string name="setup_game_accept_rules">Accept rules</string>
    <string name="bt_disconnnected">Connection to opponent lost.</string>
    <string name="place_ships_undo">Undo</string>
    <string name="end_back_to_main">End game</string>
    <string name="end_play_again">Play again</string>
    <string name="end_opponent_disconnected">Opponent disconnected...</string>
    <string name="end_opponent_wants_to_play_again">Opponent wants to play again!</string>
    <string name="start_no_opponent">Failed to find opponent, please try again.</string>
    <string name="end_view_my_ships">My ships</string>
    <string name="end_view_opponents_ships">Opponent\'s ships</string>
</resources>
