<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@drawable/horizon">
	<ImageView android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:src="@drawable/ship_trans"
		android:layout_gravity="center" android:scaleType="centerInside"></ImageView>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical"
		android:background="@color/background_overlay_dark">
		<ImageView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center"
			android:src="@drawable/header_select_rules"></ImageView>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/setup_game_game_type"
			android:textSize="20dp" android:textColor="@color/navy_brown"></TextView>
		<Spinner android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/setup_game_game_type"
			android:prompt="@string/setup_game_select_game_type"></Spinner>
		<Button android:id="@+id/setup_game_btn_ok"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|bottom" android:text="@string/setup_game_accept_rules"
			android:textSize="20dp"></Button>
	</LinearLayout>
</FrameLayout>
